--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/anicholls/sketch-lint#readme",
   "dependencies": {
     "fs": "0.0.1-security",
-    "jszip": "^3.1.3"
+    "jszip": "^3.1.3",
+    "sketch2json": "^0.1.0"
   }
 }
