--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/anicholls/sketch-lint#readme",
   "dependencies": {
     "command-line-args": "^4.0.6",
+    "command-line-usage": "^4.0.0",
     "fs": "0.0.1-security",
     "jszip": "^3.1.3",
     "sketch2json": "^0.1.0"
