--- a/.editorconfig
+++ b/.editorconfig
@@ -9,6 +9,6 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 
 # 2 space indentation
-[*.{js,json}]
+[*.{js,json,md}]
 indent_style = space
 indent_size = 2
