--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/anicholls/sketch-lint#readme",
   "dependencies": {
+    "colors": "^1.1.2",
     "command-line-args": "^4.0.6",
     "command-line-usage": "^4.0.0",
     "fs": "0.0.1-security",
